--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                     <p>His evolution is exemplary for the new breeds who aspires for knowledge and focused growth. His developed skills became a pedigree and has been an asset to the company he worked for. As a new employee, his focused behavior sometimes misunderstood in his first month on work. He never stops analyzing and familiarizing, but always making sure he reports flaws to his superior and laydown solutions. With his superiors' constructive mind and watchful eye, his initiative and potentials are always remarkable. So, trained by his former Marketing Manager, how to discuss matters to company Presidents, Directors, and CEOs... he eventually made it, and was given a chance to work involving these executives and discuss matters regarding project development within high-level meetings.</p>
                     <p><br></p>
                     <p>The REV looks ahead and make sure that the core of his work is always inline with the business objectives or company goals.</p>
+                    <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
+                    <p><br></p>
                 </div>
                 <div class="download">
                     <a target="_blank" rel="nofollow" href="https://drive.google.com/file/d/12Qfljk_eQKxmUjrf9PLSLjmIyPfca1P5/view?usp=sharing">View CV >></a>
