--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <a class="button red" target="_blank" href="http://mytaxi.ph">live site</a><br><i>Note: Live Site may have been updated and may not appear the same...</i>
                         </div>
                     </div>
-                    <p><b>2012</b> - Before GRAB became who they are today...</p>
+                    <p><b>2012</b> - Before GRAB became who they are today, it was once MyTAXI.ph. The owner was a friend to the Magsaysay Royalties. This was an initial release of the MyTAXI app here in the Philippines. MyTAXI was operating in Thailand, Malaysia, Indonesia… Basically, it is a South-East Asian Version of Uber, but focuses on Taxi Users, Drivers, and Operators.</p>
                 </div>
 
                 <div class="content">
