--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p><br></p>
                     <p>The REV looks ahead and make sure that the core of his work is always inline with the business objectives or company goals.</p>
                     <p><br></p>
-                    <p onclick="back()">< &nbsp; Back</p>
+                    <p onclick="back()" style="cursor: pointer;">< &nbsp; Back</p>
                 </div>
                 <div class="download">
                     <a target="_blank" rel="nofollow" href="https://drive.google.com/file/d/12Qfljk_eQKxmUjrf9PLSLjmIyPfca1P5/view?usp=sharing">View CV >></a>
@@ -192,7 +192,7 @@
                         <a target="_blank" href="static/images/web/misc/SalvationCapital.jpg"><img src="static/images/web/misc/SalvationCapital.jpg"></a>
                     </div>
                     <p><br></p>
-                    <p onclick="back()">< &nbsp; Back</p>
+                    <p onclick="back()" style="cursor: pointer;">< &nbsp; Back</p>
                 </div> 
             </div>
 
@@ -235,7 +235,7 @@
                         <hr>
                     </div>
                     <p><br></p>
-                    <p onclick="back()">< &nbsp; Back</p>
+                    <p onclick="back()" style="cursor: pointer;">< &nbsp; Back</p>
                 </div>
             
             </div>
@@ -342,7 +342,7 @@
                         <img src="static/images/prints/misc/illuminati.jpg">
                     </div>
                     <p><br></p>
-                    <p onclick="back()">< &nbsp; Back</p>
+                    <p onclick="back()" style="cursor: pointer;">< &nbsp; Back</p>
                 </div> 
 
             </div>
@@ -400,7 +400,7 @@
                         <a target="_blank" href="static/images/vector_arts/xtreme-resto-03.jpg"><img src="static/images/vector_arts/xtreme-resto-03.jpg"></a>
                     </div>
                     <p><br></p>
-                    <p onclick="back()">< &nbsp; Back</p>
+                    <p onclick="back()" style="cursor: pointer;">< &nbsp; Back</p>
                 </div>
 
             </div>
@@ -438,7 +438,7 @@
                         <a target="_blank" href="static/images/early_works/sktch_8.jpg"><img src="static/images/early_works/sktch_8.jpg"></a>
                     </div>
                     <p><br></p>
-                    <p onclick="back()">< &nbsp; Back</p>
+                    <p onclick="back()" style="cursor: pointer;">< &nbsp; Back</p>
                 </div>
 
             </div>
