--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div class="page" id="page">
             <ul class="nav">
                 <li class="btn" id="about" >ABOUT</li>
-                <li class="btn" id="web" >WEB <span style="font-weight: 300;">&</span> UI</li>
-                <li class="btn" id="project" ><span style="font-weight:300;font-size:65%;">UX/CX</span> PROJECT</li>
+                <li class="btn" id="web" >WEB <span>&</span> UI</li>
+                <li class="btn" id="project" ><span>UX/CX</span> PROJECT</li>
+                <li class="btn" id="motorsports" ><span>MOTOR</span>SPORTS</li>
                 <li class="btn" id="prints" >PRINTS</li>
                 <li class="btn" id="illustrations" >Illustrations</li>
-                <li class="btn" id="work" ><span style="font-weight:300;font-size:65%;">EARLY</span> WORKS</li>
+                <li class="btn" id="work" ><span>EARLY</span> WORKS</li>
             </ul>
             <div class="logo"><span style="font-size: 1ch; font-weight: 300;">the</span> Rev</div>
 
@@ -240,6 +241,69 @@
             
             </div>
 
+            <!-- Motorsports section -->
+            <div class="container" id="motorsports">
+                <div class="nav-det">
+                    <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
+                    <p class="not"> &nbsp;  | &nbsp;  </p>
+                    <p>Motorsports</p>
+                </div>
+                <div class="content">
+                    <p><br></p>
+                    <p>Graphic Decals adn Stickers for Motorcycle and Automotive Vihicles</p>
+                    <p><br></p>
+                    <div class="by3s">
+                        <p><br></p>
+                        <a target="_blank" href="static/images/motorsports/auto1.jpg"><img src="static/images/motorsports/auto1.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/auto2.jpg"><img src="static/images/motorsports/auto2.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/auto3.jpg"><img src="static/images/motorsports/auto3.jpg"></a>
+                    </div>
+                    <p><br></p>
+                    <div class="by3s">
+                        <hr>
+                        <p><b>Big Bikes</b></p>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/motorsports/bk1.jpg"><img src="static/images/motorsports/bk1.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/bk2.jpg"><img src="static/images/motorsports/bk2.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/bk3.jpg"><img src="static/images/motorsports/bk3.jpg"></a>
+                    </div>
+                    <p><br></p>
+                    <div class="by3s">
+                        <hr>
+                        <p><b>KTM Enthusiasts</b></p>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/motorsports/ktm1.jpg"><img src="static/images/motorsports/ktm1.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/ktm2.jpg"><img src="static/images/motorsports/ktm2.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/ktm3.jpg"><img src="static/images/motorsports/ktm3.jpg"></a>
+                    </div>
+                    <p><br></p>
+                    <div class="by3s">
+                        <hr>
+                        <p><b>Accessories</b></p>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/motorsports/acc/rb1.jpg"><img src="static/images/motorsports/acc/rb1.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/acc/rb2.jpg"><img src="static/images/motorsports/acc/rb2.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/acc/adv-boxes.jpg"><img src="static/images/motorsports/acc/adv-boxes.jpg"></a>
+                    </div>
+                    <p><br></p>
+                    <div class="by3s">
+                        <hr>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/motorsports/01.jpg"><img src="static/images/motorsports/01.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/02.jpg"><img src="static/images/motorsports/02.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/03.jpg"><img src="static/images/motorsports/03.jpg"></a>
+                    </div>
+                    <div class="by3s">
+                        <a target="_blank" href="static/images/motorsports/04.jpg"><img src="static/images/motorsports/04.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/05.jpg"><img src="static/images/motorsports/05.jpg"></a>
+                        <a target="_blank" href="static/images/motorsports/06.jpg"><img src="static/images/motorsports/06.jpg"></a>
+                    </div>
+                    <p><br></p>
+                    <a onclick="back()" style="cursor: pointer;">< &nbsp; Back</a>
+                </div>
+            
+            </div>
+
             <!-- Prints section -->
             <div class="container" id="prints">
                 <div class="nav-det">
@@ -365,7 +429,7 @@
                         <hr>
                     </div>
                     <div class="by3s">
-                        <p>Logo designs based on client.s detailed request and the Objectives of the logo, whether if it is for branding or a temporary logo, or for a certain product, events or promotion.</p>
+                        <p><b>LOGO</b> designs based on client.s detailed request and the Objectives of the logo, whether if it is for branding or a temporary logo, or for a certain product, events or promotion.</p>
                         <p><br></p>
                         <a target="_blank" href="static/images/vector_arts/logos/GATES_logo.jpg"><img src="static/images/vector_arts/logos/GATES_logo.jpg"></a>
                         <a target="_blank" href="static/images/vector_arts/logos/A6V3com_final.jpg"><img src="static/images/vector_arts/logos/A6V3com_final.jpg"></a>
@@ -386,6 +450,14 @@
                     </div>
                     <div class="by2s">
                         <a target="_blank" href="static/images/vector_arts/logos/Dichiaro-Custom-Painting-V2-01.jpg"><img src="static/images/vector_arts/logos/Dichiaro-Custom-Painting-V2-01.jpg"></a>
+                        <p><br></p>
+                        <hr>
+                    </div>
+                    <div class="by2s">
+                        <p>Ad Campaign - Design & Management</p>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/ads/ad01.jpg"><img src="static/images/ads/ad01.jpg"></a>
+                        <a target="_blank" href="static/images/ads/ad02.jpg"><img src="static/images/ads/ad02.jpg"></a>
                         <p><br></p>
                         <hr>
                     </div>
