--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="content">
                     <p><br></p>
-                    <p>Graphic Decals adn Stickers for Motorcycle and Automotive Vihicles</p>
+                    <p>Graphic Decals and Stickers for Motorcycle and Automotive Vihicles</p>
                     <p><br></p>
                     <div class="by3s">
                         <p><br></p>
