--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <nav>
         <h1><span style="font-weight: 300;">the</span> <span style="font-size: 3ch;">Rev</span></h1>
         <div class="tagline">
-            <h1>web <span style="font-weight: 300;">|</span> UI/UX</h1> 
-            <h2><span style="font-weight: 300;">the</span> DESIGNER</h2>
+            <h1><span style="font-weight: 300;">visual</span> DESIGN</h1>
+            <h2>Branding <span style="font-weight: 300;"> GRAPHICS</span></h2>
+            <h2>web <span style="font-weight: 300;">|</span> UI/UX</h2>
             <h3>2 decades of reinvention</h3>
         </div>
         <div class="nav-ctn">
