--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revor Quebec</title>
-    <meta name="description" content="Rev is a Users/Customer Experience Designer, Product Business Process / Operation Flow Design, Web and Applications UI Designer. With a solid 18 years of work experience in similar fields...">
+    <meta name="description" content="Rev is a Users/Customer Experience Designer, Product Business Process / Operation Flow Design, Web and Applications UI Designer. With 2 decades of work experience in similar fields...">
     
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/mobile.css">
@@ -75,16 +75,16 @@
                     <p><b>Summary</b></p><p><br></p>
                     <p><b>Revor Quebec</b> is a pure breed Professional Designer with a traditional Fine Arts educational background, and evolved to apply such skills in computer graphics through related applications. Started out like every designer did. Taught himself with the latest application relevant to his goals and profession, and eventually, Web and UI Designs. Tracking his experiences, his specialization funneled down in Analytics, Marketing, Business Development skills that gave him razor sharp UX or Customer Experience engineering advantage.</p>
                     <p><br></p>
-                    <p>18 Years of continuous work experience in related fields. Never a single thought that he would change career, and is very certain of his Skills and Abilities. In his nearly 2 decades of professional experience, Revor Quebec understands what a company needs from a contributing professional.</p>
+                    <p>20 Years of continuous work experience in related fields. Never a single thought that he would change career, and is very certain of his Skills and Abilities. In his 2 decades of professional experience, Revor Quebec understands what a company needs from a contributing professional.</p>
                     <p><br></p>
                     <p>His evolution is exemplary for the new breeds who aspires for knowledge and focused growth. His developed skills became a pedigree and has been an asset to the company he worked for. As a new employee, his focused behavior sometimes misunderstood in his first month on work. He never stops analyzing and familiarizing, but always making sure he reports flaws to his superior and laydown solutions. With his superiors' constructive mind and watchful eye, his initiative and potentials are always remarkable. So, trained by his former Marketing Manager, how to discuss matters to company Presidents, Directors, and CEOs... he eventually made it, and was given a chance to work involving these executives and discuss matters regarding project development within high-level meetings.</p>
                     <p><br></p>
-                    <p>REVOR looks ahead and make sure that the core of his work is always inline with the business objectives or company goals.</p>
+                    <p>REVOR looks ahead and make sure that the core of his work is always inline with the business objectives and company goals.</p>
                     <p><br></p>
                     <a onclick="back()" style="cursor: pointer;">< &nbsp; Back</a>
                 </div>
                 <div class="download">
-                    <a target="_blank" rel="nofollow" href="https://drive.google.com/file/d/1kCjSVs-PMfzI31DGW4f6zSq54uIU_4Ol/view?usp=sharing">View CV >></a>
+                    <a target="_blank" rel="nofollow" href="https://drive.google.com/file/d/1CXMEgvA8lcRf0C6A9KWVcGnaLnQJR2S9/view?usp=sharing">View CV >></a>
                 </div>
             
             </div>
