--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <a onclick="back()" style="cursor: pointer;">< &nbsp; Back</a>
                 </div>
                 <div class="download">
-                    <a target="_blank" rel="nofollow" href="#">View CV >></a>
+                    <a target="" rel="nofollow" href="#">View CV >></a>
                 </div>
             
             </div>
