--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="page" id="page">
             <ul class="nav">
                 <li class="btn" id="about" >ABOUT</li>
-                <li class="btn" id="web" >WEB <span>&</span> UI</li>
-                <li class="btn" id="project" ><span>UX/CX</span> PROJECT</li>
+                <li class="btn" id="web" >WEB <span>&</span> UI/UX</li>
+                <li class="btn" id="project" ><span>Project Mgmt.</span> PM</li>
                 <li class="btn" id="motorsports" ><span>MOTOR</span>SPORTS</li>
                 <li class="btn" id="signs" >SIGNS <span>& Events</span></li>
                 <li class="btn" id="prints" >PRINTS <span>& Decks</span></li>
@@ -215,10 +215,19 @@
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
                     <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>UX/CX  - Product Designing</p>
-                </div> 
+                    <p>Customer Experience (CX) in Project Management & Product Designing</p>
+                </div>
                 <div class="content">
-                    <p><br></p>
+                    <div class="by1s">
+                        <p><br></p>
+                        <p><b>Personal Basic Process</b> to keep the operation systematic. <b>Rev</b> uses a simple, standard process in all of his Lead and Managerial work.</p>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/process/basic-creatives-process.png"><img src="static/images/process/basic-creatives-process.png"></a>
+                        <p><br></p>
+                    </div>
+                </div>
+                <div class="content">
+                    <hr>
                     <p><b>Major Project</b></p>
                     <p>A digital product designing project</p>
                     <p><br></p>
@@ -322,7 +331,7 @@
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
                     <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>Motorsports</p>
+                    <p>Signages, Ads, and Events</p>
                 </div>
                 <div class="content">
                     <p><br></p>
