--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
             <div class="container" id="about">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>About</p>
                 </div> 
                 <div class="content">
                     <p><b>Skills</b></p><p><br></p>
@@ -94,8 +92,6 @@
             <div class="container" id="web">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>Project</p>
                 </div>
 
                 <div class="content">
@@ -214,8 +210,6 @@
             <div class="container" id="project">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>Customer Experience (CX) in Project Management & Product Designing</p>
                 </div>
                 <div class="content">
                     <div class="by1s">
@@ -267,8 +261,6 @@
             <div class="container" id="motorsports">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>Motorsports</p>
                 </div>
                 <div class="content">
                     <p><br></p>
@@ -330,8 +322,6 @@
             <div class="container" id="signs">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>Signages, Ads, and Events</p>
                 </div>
                 <div class="content">
                     <p><br></p>
@@ -366,8 +356,6 @@
             <div class="container" id="prints">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp;  </p>
-                    <p>Project</p>
                 </div>
 
                 <div class="content">
@@ -470,7 +458,7 @@
                         <p>in National Book Store for DONG-A Ballpoint Pens</p>
                         <p><br></p>
                         <a target="_blank" href="static/images/prints/nbs-01.jpg"><img src="static/images/prints/nbs-01.jpg"></a>
-                        <a target="_blank" href="static/images/prints/nbs-02.jpg""><img src="static/images/prints/nbs-02.jpg"></a>
+                        <a target="_blank" href="static/images/prints/nbs-02.jpg"><img src="static/images/prints/nbs-02.jpg"></a>
                         <p><br></p>
                     </div>
                     <div class="by2s">
@@ -491,8 +479,6 @@
             <div class="container" id="illustrations">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp; </p>
-                    <p>Illustrations & Logos</p>
                 </div>              
                 
                 <div class="content">
@@ -561,8 +547,6 @@
             <div class="container" id="work">
                 <div class="nav-det">
                     <p onclick="back()"><span class="span-hide"></span>< &nbsp; Back</p>
-                    <p class="not"> &nbsp;  | &nbsp; </p>
-                    <p>Early Works</p>
                 </div>              
                 
                 <div class="content">
