--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -128,6 +129,17 @@
                 </div>
 
                 <div class="content">
+                    <div class="card" style="background-image: url('static/images/web/CareLine.png');">
+                        <div class="card-content">
+                            <h2>CareLine Services</h2>
+                            <a class="button blue" target="_blank" href="static/images/web/CareLine.png">design</a>
+                            <a class="button red" target="_blank" href="https://carelineservices.com/">live site</a><br><i>Note: Live Site may have been updated and may not appear the same...</i>
+                        </div>
+                    </div>
+                    <p><b>2014</b> - This design is for a GPMI Client using WP CMS. I was already operating as an independet service provider. I appreciate Magsaysay Maritime Group of Companies for their trust in me.</p>
+                </div>
+
+                <div class="content">
                     <div class="card" style="background-image: url('static/images/web/mol-01.1.jpg');">
                         <div class="card-content">
                             <h2>Magsaysay MOL</h2>
@@ -135,7 +147,7 @@
                             <a class="button red" target="_blank" href="http://magmol.com/">live site</a><br><i>Note: Live Site may have been updated and may not appear the same...</i>
                         </div>
                     </div>
-                    <p><b>2014</b> - This design is an update for this year. I was already operating as an independet service provider. I appreciate Magsaysay Maritime Group of Companies for their trust in me.</p>
+                    <p><b>2014</b> - This design is an update for this year with Joomla CMS. The content team have been using the CMS for so long that I would have to learn the system and apply the new thesign for them.</p>
                 </div>
 
                 <div class="content">
@@ -345,6 +357,15 @@
                         <a target="_blank" href="static/images/events/truck_Page_2.png"><img src="static/images/events/truck_Page_2.png"></a>
                         <a target="_blank" href="static/images/events/truck_Page_3.png"><img src="static/images/events/truck_Page_3.png"></a>
                         <a target="_blank" href="static/images/events/truck_Page_4.png"><img src="static/images/events/truck_Page_4.png"></a>
+                    </div>
+                    <p><br></p>
+                    <div class="by2s">
+                        <hr>
+                        <p><b>Event and Promotion Display</b></p>
+                        <p>in National Book Store for DONG-A Ballpoint Pens</p>
+                        <p><br></p>
+                        <a target="_blank" href="static/images/prints/nbs-01.jpg"><img src="static/images/prints/nbs-01.jpg"></a>
+                        <a target="_blank" href="static/images/prints/nbs-02.jpg"><img src="static/images/prints/nbs-02.jpg"></a>
                     </div>
                     <p><br></p>
                     <a onclick="back()" style="cursor: pointer;">< &nbsp; Back</a>
