--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -198,7 +197,7 @@
                     <div class="by3s">
                         <p><b>Miscellaneous UI Designs</b></p>
                         <hr>
-                        <p>Small and quick projects that I did during my freelancing times and in between employments. I lost most of them everytime my hard drive gets corrupted.</p>
+                        <p><b>2009 & earlier</b> - Small and quick projects that I did during my freelancing times and in between employments. I lost most of them everytime my hard drive gets corrupted.</p>
                         <p><br></p>
                         <a target="_blank" href="static/images/web/misc/citas_locales_rev02.jpg"><img src="static/images/web/misc/citas_locales_rev02.jpg"></a>
                         <a target="_blank" href="static/images/web/misc/SEO-Book.jpg"><img src="static/images/web/misc/SEO-Book.jpg"></a>
