--- a/index.html
+++ b/index.html
@@ -46,24 +46,27 @@
                 <div class="content">
                     <p><b>Skills</b></p><p><br></p>
                     <div class="icon-logo">
-                        <img src="static/images/logo/analytics.png" alt="Google Analytics"  title="Google Analytics">
-                        <img src="static/images/logo/adsense.jpg" alt="Google AdSense" title="Google AdSense">
+                        <img src="static/images/logo/google-tools.png" alt="Google Business"  title="Google Business">
+                        <img src="static/images/logo/clickup.png" alt="ClickUp Teams & Projects" title="ClickUp Teams & Projects">
+                        <img src="static/images/logo/figma.png" alt="Figma" title="Figma">
+                        <img src="static/images/logo/wordpress.png" alt="CSS" title="Wordpress">
                         <img src="static/images/logo/HTML5.png" alt="HTML" title="HTML">
                         <img src="static/images/logo/CSS3.png" alt="CSS" title="CSS">
-                        <img src="static/images/logo/figma.png" alt="Figma" title="Figma">
-                        <img src="static/images/logo/adobe_dreamweaver.png" alt="Adobe Dreamweaver" title="Adobe Dreamweaver">
-                        <img src="static/images/logo/adobe_illustrator.png" alt="Adobe Illustrator" title="Adobe Illustrator">
-                        <img src="static/images/logo/adobe_photoshop.png" alt="Adobe Photoshop.png" title="Adobe Photoshop.png">
+                        <img src="static/images/logo/Adobe-logo.png" alt="Adobe Products" title="Adobe Products">
+                        <img src="static/images/logo/Adobe-CS.png" alt="Adobe Creative Suite" title="Adobe Creative Suite">
                     </div>
                     <ul>
-                        <li>Users or Customer Experience Design (UX)</li>
+                        <li>End-to-End Project Management</li>
+                        <li>Multiple Team Management</li>
+                        <li>Production Management</li>
+                        <li>Tools Knowledge for Managment (Smartsheet, ClickUp, etc.</li>
+                        <li>User Experience abd Interface Design</li>
+                        <li>Customer Experience Design (UX)</li>
                         <li>Product Business Process / Operation Flow Design</li>
-                        <li>Web and Applications UI Design</li>
+                        <li>Web and Applications Interface Design</li>
                         <li>HTML, CSS, CMS Template Building</li>
                         <li>Search Engine Optimization (SEO) and Analytics</li>
-                        <li>3.1% Conversion Rate</li>
                         <li>Marketing / Product / Brand Management</li>
-                        <li>Project Management</li>
                         <li>Human Behavior Layout Optimization</li>
                         <li>Online Ad / Multimedia / Traditional Media Ad Management</li>
                     </ul>
