--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <img src="static/images/logo/google-tools.png" alt="Google Business"  title="Google Business">
                         <img src="static/images/logo/clickup.png" alt="ClickUp Teams & Projects" title="ClickUp Teams & Projects">
                         <img src="static/images/logo/figma.png" alt="Figma" title="Figma">
-                        <img src="static/images/logo/wordpress.png" alt="CSS" title="Wordpress">
+                        <img src="static/images/logo/wordpress.png" alt="Wordpress" title="Wordpress">
                         <img src="static/images/logo/HTML5.png" alt="HTML" title="HTML">
                         <img src="static/images/logo/CSS3.png" alt="CSS" title="CSS">
                         <img src="static/images/logo/Adobe-logo.png" alt="Adobe Products" title="Adobe Products">
