--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a onclick="back()" style="cursor: pointer;">< &nbsp; Back</a>
                 </div>
                 <div class="download">
-                    <a target="" rel="nofollow" href="#">View CV >></a>
+                    <a target="" rel="nofollow" href="https://drive.google.com/file/d/1uo73CUZ2UdovyYUWrr4lKGx-Lyp9CMLi/view?usp=drivesdk">View CV >></a>
                 </div>
             
             </div>
